# stm32-sandbox

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  arm-none-eabi-gcc.cmake
app/: main.cpp
app/scratch/: adc_scratch.hpp  gpio_scratch.hpp  i2c_scratch.hpp  usart_scratch.hpp
lib/drivers/: CMakeLists.txt
lib/drivers/inc/: ssd1306.hpp
lib/drivers/src/: ssd1306.cpp
lib/hal/: CMakeLists.txt
lib/hal/board/stm32f411xe/inc/: gpio.hpp
lib/hal/board/stm32f411xe/src/: adc.cpp  gpio.cpp  i2c.cpp  usart.cpp
lib/hal/gpio/: gpio.hpp  stm32f411xe_gpio.hpp
lib/hal/include/: adc.hpp  gpio.hpp  gpio_interface.hpp  i2c.hpp  usart.hpp  util.hpp
lib/hal/src/stm32f411xe/: adc.cpp  gpio.cpp  i2c.cpp
